# Arbitrage-Event-Engine

./: .gitignore  Cargo.toml  README.md
agents/arb_agent/: Cargo.toml
agents/arb_agent/src/: lib.rs
agents/bayesian_edge_agent/: Cargo.toml
agents/bayesian_edge_agent/src/: config.rs  engine.rs  lib.rs  state.rs
agents/bayesian_edge_agent/tests/: bayesian_edge_agent.rs
agents/graph_arb_agent/: Cargo.toml
agents/graph_arb_agent/src/: config.rs  engine.rs  lib.rs  state.rs  xplatform.rs
agents/graph_arb_agent/tests/: graph_arb_agent.rs
agents/market_scanner/: Cargo.toml
agents/market_scanner/src/: config.rs  kalshi.rs  lib.rs  polymarket.rs  scanner.rs  source.rs
agents/news_agent/: Cargo.toml
agents/news_agent/src/: lib.rs
agents/signal_agent/: Cargo.toml
agents/signal_agent/src/: config.rs  engine.rs  lib.rs  math.rs  state.rs  types.rs
agents/signal_agent/tests/: signal_agent.rs
agents/temporal_agent/: Cargo.toml
agents/temporal_agent/src/: config.rs  engine.rs  lib.rs  state.rs
agents/temporal_agent/tests/: temporal_agent.rs
config/: default.toml
control-panel/: Cargo.toml
control-panel-ui/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
control-panel-ui/src/app/: globals.css  layout.tsx
control-panel-ui/src/hooks/: useApi.ts  useWebSocket.ts
control-panel-ui/src/lib/: api.ts  types.ts
control-panel/src/: auth.rs  config_store.rs  event_collector.rs  lib.rs  server.rs  state.rs  ws.rs
control-panel/src/routes/: control.rs  health.rs  markets.rs  metrics_route.rs  mod.rs  portfolio.rs  signals.rs
crates/bayesian_engine/: Cargo.toml
crates/bayesian_engine/src/: engine.rs  error.rs  lib.rs  types.rs
crates/bayesian_engine/tests/: bayesian.rs
crates/calibration/: Cargo.toml
crates/calibration/src/: config.rs  engine.rs  lib.rs  state.rs  types.rs
crates/calibration/tests/: calibration_tests.rs
crates/common/: Cargo.toml
crates/common/src/: event_bus.rs  events.rs  lib.rs  snapshot.rs  types.rs
crates/common/tests/: event_bus_tests.rs
crates/cost_model/: Cargo.toml
crates/cost_model/src/: config.rs  lib.rs  model.rs
crates/cost_model/tests/: cost_model_tests.rs
crates/data_ingestion/: Cargo.toml
crates/data_ingestion/src/: config.rs  ingestion_engine.rs  lib.rs
crates/data_ingestion/src/cache/: mod.rs  snapshot_cache.rs
crates/data_ingestion/src/connectors/: calendar_connectors.rs  economic_connectors.rs  market_connectors.rs  mod.rs  news_connectors.rs  social_connectors.rs
crates/data_ingestion/src/matcher/: mod.rs
crates/data_ingestion/src/normalization/: economic_normalizer.rs  market_normalizer.rs  mod.rs  news_normalizer.rs  social_normalizer.rs
crates/data_ingestion/src/scheduler/: mod.rs  polling_manager.rs  rate_limiter.rs
crates/data_ingestion/src/streaming/: mod.rs  stream_manager.rs  websocket_client.rs
crates/data_ingestion/tests/: ingestion_tests.rs
crates/exchange_api/: Cargo.toml
crates/exchange_api/src/: config.rs  error.rs  lib.rs  types.rs
crates/exchange_api/src/connectors/: kalshi.rs  mod.rs  polymarket.rs
crates/execution_sim/: Cargo.toml
crates/execution_sim/src/: config.rs  engine.rs  lib.rs  state.rs  types.rs
crates/execution_sim/tests/: execution_sim.rs
crates/market_graph/: Cargo.toml
crates/market_graph/src/: config.rs  engine.rs  error.rs  lib.rs  types.rs
crates/market_graph/tests/: propagation.rs
crates/meta_strategy/: Cargo.toml
crates/meta_strategy/src/: config.rs  engine.rs  lib.rs  state.rs
crates/meta_strategy/tests/: meta_strategy.rs
crates/oms/: Cargo.toml
crates/oms/src/: lib.rs  manager.rs  state.rs
crates/oms/tests/: oms_tests.rs
crates/performance_analytics/: Cargo.toml
crates/performance_analytics/src/: config.rs  edge_metrics.rs  engine.rs  lib.rs  types.rs
crates/performance_analytics/tests/: performance_analytics.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: db.rs  lib.rs  models.rs  reconciliation.rs  recorder.rs
crates/portfolio_engine/: Cargo.toml
crates/portfolio_engine/src/: config.rs  engine.rs  lib.rs  state.rs  types.rs
crates/portfolio_engine/tests/: portfolio_engine.rs
crates/portfolio_optimizer/: Cargo.toml
crates/portfolio_optimizer/src/: allocator.rs  config.rs  engine.rs  error.rs  lib.rs  state.rs
crates/portfolio_optimizer/tests/: portfolio_optimizer.rs
crates/relationship_discovery/: Cargo.toml
crates/relationship_discovery/src/: config.rs  correlator.rs  engine.rs  lib.rs  types.rs
crates/relationship_discovery/tests/: relationship_discovery.rs
crates/risk_engine/: Cargo.toml
crates/risk_engine/src/: config.rs  engine.rs  error.rs  lib.rs  state.rs  types.rs
crates/risk_engine/tests/: risk_engine.rs
crates/scenario_engine/: Cargo.toml
crates/shock_detector/: Cargo.toml
crates/shock_detector/src/: config.rs  detector.rs  engine.rs  lib.rs  types.rs
crates/shock_detector/tests/: shock_detector_tests.rs
crates/signal_priority_engine/: Cargo.toml
crates/signal_priority_engine/src/: config.rs  engine.rs  lib.rs
crates/signal_priority_engine/tests/: priority_tests.rs
crates/simulation_engine/: Cargo.toml
crates/simulation_engine/src/: config.rs  engine.rs  generators.rs  lib.rs  metrics.rs  monte_carlo.rs  replay.rs  types.rs
crates/simulation_engine/tests/: simulation_tests.rs
crates/strategy_research/: Cargo.toml
crates/strategy_research/src/: backtest.rs  compiler.rs  config.rs  engine.rs  evaluator.rs  hypothesis.rs  lib.rs  registry.rs  templates.rs  types.rs
crates/strategy_research/tests/: research_tests.rs
crates/world_model/: Cargo.toml
crates/world_model/src/: config.rs  constraints.rs  engine.rs  error.rs  inference.rs  lib.rs  types.rs
crates/world_model/tests/: world_model_tests.rs
data/: arbitrage.db-shm  arbitrage.db-wal
docs/: PDR-non-developed-features.md
prediction-agent/: Cargo.toml
prediction-agent/src/: app_config.rs  main.rs
tests/cost_model_backtest/: Cargo.toml
tests/integration_harness/: Cargo.toml
tests/integration_harness/src/: main.rs
(+28 files in other folders)
