[package]
name        = "control-panel"
version     = "0.1.0"
edition     = "2021"
description = "Mission Control — real-time web dashboard for the prediction market agent"

[lib]
name = "control_panel"
path = "src/lib.rs"

[dependencies]
# Web framework
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }

# Async runtime
tokio       = { workspace = true }
tokio-util  = { workspace = true }
futures     = { workspace = true }

# Serialisation
serde       = { workspace = true }
serde_json  = { workspace = true }

# Logging
tracing     = { workspace = true }

# Error handling
anyhow      = { workspace = true }

# Time
chrono      = { workspace = true }

# Metrics
metrics                    = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# HTTP client (for prometheus proxy fallback)
reqwest     = { workspace = true }

# Internal
common      = { workspace = true }
