[package]
name    = "prediction-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prediction-agent"
path = "src/main.rs"

[dependencies]
# Shared types and event bus
common = { workspace = true }

# Engines
market_graph      = { path = "../crates/market_graph" }
bayesian_engine   = { path = "../crates/bayesian_engine" }
risk_engine       = { path = "../crates/risk_engine" }
simulation_engine = { path = "../crates/simulation_engine" }
execution_sim     = { path = "../crates/execution_sim" }

# Agents
market_scanner       = { path = "../agents/market_scanner" }
signal_agent         = { path = "../agents/signal_agent" }
graph_arb_agent      = { path = "../agents/graph_arb_agent" }
temporal_agent       = { path = "../agents/temporal_agent" }
bayesian_edge_agent  = { path = "../agents/bayesian_edge_agent" }
shock_detector       = { path = "../crates/shock_detector" }
meta_strategy             = { path = "../crates/meta_strategy" }
relationship_discovery    = { path = "../crates/relationship_discovery" }
strategy_research         = { path = "../crates/strategy_research" }
data_ingestion            = { path = "../crates/data_ingestion" }

# Pipeline engines (previously unwired)
portfolio_optimizer      = { path = "../crates/portfolio_optimizer" }
portfolio_engine         = { path = "../crates/portfolio_engine" }
performance_analytics    = { path = "../crates/performance_analytics" }
signal_priority_engine   = { path = "../crates/signal_priority_engine" }
calibration              = { path = "../crates/calibration" }
control-panel            = { path = "../control-panel" }

# Runtime & utilities
tokio      = { workspace = true }
tokio-util = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
config     = { workspace = true }
serde      = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
