[package]
name    = "news_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }
