[package]
name        = "calibration"
version     = "0.1.0"
edition     = "2021"

[dependencies]
common            = { path = "../common" }
chrono            = { version = "0.4", features = ["serde"] }
metrics           = "0.23"
serde             = { version = "1", features = ["derive"] }
tokio             = { version = "1", features = ["full"] }
tokio-util        = { version = "0.7", features = ["rt"] }
tracing           = "0.1"
