[package]
name    = "data_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
reqwest     = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
metrics     = { workspace = true }
tokio-util  = { workspace = true }
futures     = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
