[package]
name    = "exchange_api"
version = "0.1.0"
edition = "2021"

[dependencies]
common       = { workspace = true }
cost_model   = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
metrics      = { workspace = true }
parking_lot  = { workspace = true }
