[package]
name    = "meta_strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
common     = { workspace = true }
chrono     = { workspace = true }
serde      = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
tracing    = { workspace = true }
metrics    = { workspace = true }
anyhow     = { workspace = true }
