[package]
name    = "performance_analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
common     = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
metrics    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
