[package]
name    = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
common       = { workspace = true }
exchange_api = { path = "../exchange_api" }
cost_model   = { path = "../cost_model" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
metrics      = { workspace = true }
rusqlite     = { version = "0.32", features = ["bundled"] }
