[package]
name    = "portfolio_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
common     = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
metrics    = { workspace = true }

[dev-dependencies]
chrono     = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
